--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
         <div style="flex:0.6;min-width:180px">
           <label>SECRET</label>
-          <input id="setSecret" placeholder="Vine_Secret" />
+          <input id="setSecret" placeholder="Vine_Secret_2026" />
         </div>
       </div>
       <div class="row" style="gap:10px">
@@ -165,20 +165,6 @@ function toast(msg, ms=2200){
   clearTimeout(toast._to);
   toast._to = setTimeout(()=>{t.style.display="none";}, ms);
 }
-
-// --- Robust global error reporting (doesn't break UI) ---
-window.addEventListener('error', (e) => {
-  try { toast('⚠️ Erreur JS: ' + (e && e.message ? e.message : 'inconnue')); } catch {}
-});
-window.addEventListener('unhandledrejection', (e) => {
-  try {
-    const r = e && e.reason;
-    const msg = (r && r.message) ? r.message : String(r || 'inconnue');
-    toast('⚠️ Erreur: ' + msg);
-  } catch {}
-});
-
-
 
 function setNetPill(){
   const online = navigator.onLine;
@@ -370,156 +356,15 @@ async function fetchTextWithRetry(url, {timeoutMs=15000, maxRetries=4} = {}) {
 }
 
 async function fetchCSV(url) {
-  // Backward compatible: now smart-detects common Google Sheets "wrong gid / wrong tab" issues.
-  return fetchCSVSmart("generic", url);
-}
-
-function looksLikeHtml(text) {
-  const t = (text || "").trim().slice(0, 200).toLowerCase();
-  return t.startsWith("<!doctype") || t.startsWith("<html") || t.includes("<head") || t.includes("<body");
-}
-
-function normalizeGSheetUrl(url) {
-  if (!url) return url;
-  let u = url.trim();
-  // If user pasted pubhtml, try convert to output=csv
-  if (u.includes("/pubhtml")) {
-    u = u.replace("/pubhtml", "/pub");
-    if (!/output=csv/.test(u)) {
-      u += (u.includes("?") ? "&" : "?") + "output=csv";
-    }
-  }
-  return u;
-}
-
-function buildCandidateWithGid(originalUrl, gid) {
-  let u = originalUrl;
-  if (/([?&])gid=\d+/.test(u)) {
-    u = u.replace(/([?&])gid=\d+/, `$1gid=${gid}`);
-  } else {
-    u += (u.includes("?") ? "&" : "?") + `gid=${gid}`;
-  }
-  if (!/output=csv/.test(u) && u.includes("/pub")) {
-    u += (u.includes("?") ? "&" : "?") + "output=csv";
-  }
-  return u;
-}
-
-function toPubHtmlUrl(csvUrl) {
-  const u = csvUrl.split("#")[0];
-  if (u.includes("/pub?") || u.includes("/pub&") || u.includes("/pubhtml")) {
-    const base = u.replace("/pubhtml", "/pub").replace("/pub?", "/pubhtml?");
-    const parts = base.split("?");
-    const path = parts[0];
-    const qs = parts[1] || "";
-    if (!qs) return path;
-    const kept = qs
-      .split("&")
-      .map(s => s.trim())
-      .filter(Boolean)
-      .filter(kv => !kv.startsWith("output=") && !kv.startsWith("single=") && !kv.startsWith("range="));
-    return kept.length ? `${path}?${kept.join("&")}` : path;
-  }
-  return null;
-}
-
-function validateHeaders(kind, rows) {
-  if (!rows || !rows.length) return { ok: false, reason: "CSV vide" };
-  const header = (rows[0] || []).map(x => String(x || "").trim().toLowerCase());
-  const has = (name) => header.includes(name.toLowerCase());
-  if (kind === "base") {
-    const ok = (has("asin") || has("asins")) && (has("email") || has("delivered_to") || has("account"));
-    return ok ? { ok: true } : { ok: false, reason: "Colonnes base attendues manquantes (asin + email)" };
-  }
-  if (kind === "mapping") {
-    const ok = has("fnsku") && has("asin");
-    return ok ? { ok: true } : { ok: false, reason: "Colonnes mapping attendues manquantes (fnsku + asin)" };
-  }
-  return { ok: true };
-}
-
-async function tryFetchCsvObjects(kind, url, opts = {}) {
-  const text = await fetchTextWithRetry(url, { timeoutMs: opts.timeoutMs ?? 18000, maxRetries: opts.maxRetries ?? 4 });
-  if (looksLikeHtml(text)) {
-    return { ok: false, reason: "URL renvoie du HTML (pas un CSV). Publie la feuille en CSV ou vérifie l'onglet.", url, status: 200 };
-  }
-  const rows = parseCSV(text);
-  const v = validateHeaders(kind, rows);
-  if (!v.ok) return { ok: false, reason: v.reason, url, rows };
-  const objs = rowsToObjects(rows);
-  return { ok: true, url, objs, rows };
-}
-
-async function detectGidsFromPubHtml(pubHtmlUrl) {
-  const text = await fetchTextWithRetry(pubHtmlUrl, { timeoutMs: 18000, maxRetries: 2 });
-  const gids = new Set();
-  const re = /[?&]gid=(\d+)/g;
-  let m;
-  while ((m = re.exec(text)) !== null) gids.add(m[1]);
-  return Array.from(gids).map(s => parseInt(s, 10)).filter(n => Number.isFinite(n));
-}
-
-async function fetchCSVSmart(kind, url) {
   if (!url) throw new Error("URL CSV manquante.");
-  const original = normalizeGSheetUrl(url);
-
-  // First attempt
-  try {
-    const r1 = await tryFetchCsvObjects(kind === "generic" ? "generic" : kind, original);
-    if (r1.ok) return r1.objs;
-  } catch (e) {
-    // Continue to autodetect if possible
-  }
-
-  // Auto-sheet detect only for base/mapping
-  if (kind !== "base" && kind !== "mapping") {
-    const r = await tryFetchCsvObjects("generic", original).catch(err => { throw err; });
-    if (!r.ok) throw new Error(r.reason || "Impossible de lire le CSV.");
-    return r.objs;
-  }
-
-  const cacheKey = kind === "base" ? "DETECTED_GID_BASE" : "DETECTED_GID_MAPPING";
-  const cachedGid = localStorage.getItem(cacheKey);
-  if (cachedGid && /\d+/.test(cachedGid)) {
-    const candidate = buildCandidateWithGid(original, cachedGid);
-    const rc = await tryFetchCsvObjects(kind, candidate, { timeoutMs: 15000, maxRetries: 2 }).catch(() => null);
-    if (rc && rc.ok) return rc.objs;
-  }
-
-  const pubHtml = toPubHtmlUrl(original);
-  if (!pubHtml) {
-    throw new Error("CSV invalide ou vide. Vérifie l'URL CSV (pub?gid=...&output=csv) et que l'onglet est bien publié.");
-  }
-
-  const gids = await detectGidsFromPubHtml(pubHtml).catch(() => []);
-  if (!gids.length) {
-    throw new Error('Impossible de détecter les onglets (gid) sur la page publiée. Vérifie que la feuille est "Publiée sur le Web".');
-  }
-
-  for (const gid of gids) {
-    const candidate = buildCandidateWithGid(original, gid);
-    const r = await tryFetchCsvObjects(kind, candidate, { timeoutMs: 15000, maxRetries: 2 }).catch(() => null);
-    if (r && r.ok) {
-      localStorage.setItem(cacheKey, String(gid));
-      return r.objs;
-    }
-  }
-
-  throw new Error(`CSV vide ou onglet incorrect (${kind}). Vérifie l'URL (gid) ou publie le bon onglet en CSV.`);
+  const text = await fetchTextWithRetry(url, {timeoutMs: 18000, maxRetries: 4});
+  const rows = parseCSV(text);
+  return rowsToObjects(rows);
 }
 
 /* ---------- Pull base + mapping ---------- */
 async function pullBaseAndMapping(){
   const s = getSettings();
-  // Anti-429 : évite de re-télécharger en boucle si tu cliques plusieurs fois
-  const nowMs = Date.now();
-  const lastPullMs = Number(localStorage.getItem('VINE_lastPullMs') || '0');
-  if (nowMs - lastPullMs < 60_000) {
-    toast('⏳ Attends 1 min (anti-429)');
-    return;
-  }
-  localStorage.setItem('VINE_lastPullMs', String(nowMs));
-
   if (!s.baseCsvUrl || !s.mappingCsvUrl){
     toast("⚠️ Renseigne les 2 URLs CSV (Base + Mapping) dans Réglages.", "warn");
     return;
@@ -547,8 +392,8 @@ async function pullBaseAndMapping(){
     const prevMap  = JSON.parse(localStorage.getItem("vine_mapping_cache") || "[]");
 
     const [base, mapping] = await Promise.all([
-      fetchCSVSmart('base', s.baseCsvUrl),
-      fetchCSVSmart('mapping', s.mappingCsvUrl)
+      fetchCSV(s.baseCsvUrl),
+      fetchCSV(s.mappingCsvUrl)
     ]);
 
     // Tolérance : si un CSV revient vide (rate limit / bug), on conserve l'ancien cache
@@ -575,24 +420,15 @@ async function pullBaseAndMapping(){
     if (typeof renderAccountFilterOptions === 'function') renderAccountFilterOptions();
     toast(`✅ Base:${BASE_ROWS.length} | Mapping:${MAPPING_ROWS.length}`, "ok");
 
-      // trace "Dernière sync Google Sheets" : seulement si au moins 1 CSV a été réellement mis à jour
-  const didUpdate = (baseOk || mapOk);
-  if (didUpdate) {
-    const hhmm = new Date().toLocaleTimeString('fr-FR', {hour:'2-digit', minute:'2-digit'});
-    localStorage.setItem(LS.lastSync, hhmm);
-    try{ el("lastSync").textContent = hhmm; }catch(_){}
-  } else {
-    toast("❌ CSV vide ou onglet incorrect (vérifie URL + onglet publié)", "err");
-  }
+    // trace "Dernière sync Google Sheets"
+    localStorage.setItem(LS.lastSync, nowHHMM());
+    // rafraîchit le badge
+    try{ el("lastSync").textContent = localStorage.getItem(LS.lastSync) || "—"; }catch(_){ }
 
   }catch(e){
     const msg = String(e && e.message ? e.message : e);
     if (msg.includes("HTTP 429")){
       toast("❌ Pull impossible (429). Réessaie dans 30s.", "err");
-    } else if (/csv|onglet|colonn|publi/i.test(msg)) {
-      toast("❌ " + msg, "err");
-    } else if (/csv|onglet|colonn|publi/i.test(msg)) {
-      toast("❌ " + msg, "err");
     } else {
       toast("❌ Pull impossible (URL / réseau ?)", "err");
     }
@@ -623,14 +459,6 @@ async function syncActions(){
   if(!s.scriptUrl || !s.secret){
     toast("⚠️ Mets Apps Script URL + SECRET");
     return;
-  }
-
-  // Message clair si la base/mapping n'ont pas été chargés (souvent URL CSV vide / onglet incorrect)
-  const baseItems = getLocal("baseItems", []);
-  const mappingItems = getLocal("mappingItems", []);
-  if(!baseItems.length || !mappingItems.length){
-    toast("❌ CSV vide ou onglet incorrect (base/mapping). Fais 'Mettre à jour base + mapping' et vérifie les URLs CSV.", "err");
-    // On continue quand même si tu veux pousser des actions existantes, mais au moins le message est clair.
   }
   const actions = getActions();
   if(!actions.length){
