--- a/index.html
+++ b/index.html
@@ -681,29 +681,44 @@ function fetchWithTimeout(url, options = {}, ms = 15000){
   return fetch(url, {...options, signal: ctrl.signal}).finally(()=>clearTimeout(id));
 }
 
-async function apiGet(params){
-  if(!apiUrl || !secret) throw new Error('Réglages manquants (API_URL/SECRET)');
+async function apiGet(params = {}) {
+  if (!apiUrl || !secret) throw new Error("Réglages manquants (API URL / SECRET).");
+
   const u = new URL(apiUrl);
-  u.searchParams.set('secret', secret);
-  Object.entries(params||{}).forEach(([k,v])=>u.searchParams.set(k,v));
-  // timeout + anti-cache
-  u.searchParams.set('_', String(Date.now()));
-  const r = await fetchWithTimeout(u.toString(), {method:'GET'}, 15000);
-  if(!r.ok) throw new Error('HTTP_'+r.status);
+  u.searchParams.set("secret", secret);
+
+  for (const [k, v] of Object.entries(params || {})) {
+    u.searchParams.set(k, String(v ?? ""));
+  }
+
+  // anti-cache
+  u.searchParams.set("_", String(Date.now()));
+
+  const r = await fetchWithTimeout(u.toString(), { method: "GET" }, 15000);
+  if (!r.ok) throw new Error("HTTP_" + r.status);
   return await r.json();
 }
-async function apiPost(body){
-  if(!apiUrl || !secret) throw new Error('Réglages manquants (API_URL/SECRET)');
-  // IMPORTANT: Apps Script + CORS -> on envoie en text/plain pour éviter le préflight bloquant
-  const payload = JSON.stringify({secret, ...body});
-  const r = await fetchWithTimeout(apiUrl, {
-    method:'POST',
-    headers:{'Content-Type':'text/plain;charset=utf-8'},
-    body: payload
-  }, 15000);
-  if(!r.ok) throw new Error('HTTP_'+r.status);
+
+async function apiPost(body = {}) {
+  if (!apiUrl || !secret) throw new Error("Réglages manquants (API URL / SECRET).");
+
+  // IMPORTANT : Apps Script aime bien text/plain (évite CORS/OPTIONS selon les cas)
+  const payload = JSON.stringify({ secret, ...(body || {}) });
+
+  const r = await fetchWithTimeout(
+    apiUrl,
+    {
+      method: "POST",
+      headers: { "Content-Type": "text/plain;charset=utf-8" },
+      body: payload,
+    },
+    15000
+  );
+
+  if (!r.ok) throw new Error("HTTP_" + r.status);
   return await r.json();
 }
+
 
 /* Pull master + mapping */
 async function pullAll(){
