--- a/index.html
+++ b/index.html
@@ -1364,9 +1364,29 @@ $('btnRebuildState').onclick = async ()=>{
     $('syncMsg').textContent = '⏳ Rebuild stock serveur...';
     const r = await apiGet('op=rebuild_state');
     if(!r.ok) throw new Error(r.error||'rebuild_state failed');
-    await pullState();
+
+    const p = await apiGet('op=pull_state');
+    if(!p.ok) throw new Error(p.error||'pull_state failed');
+
+    // Update local state map from server response (no stale cache)
+    const arr = p.state || [];
+    const sm = {};
+    for(const it of arr){
+      const fn = (it.fnsku||'').toUpperCase().trim();
+      const ca = (it.caisse||'').toUpperCase().trim();
+      if(!fn || !ca) continue;
+      if(!sm[fn]) sm[fn] = { asin: (it.asin||'').toUpperCase().trim(), caisses:{} };
+      if(it.asin) sm[fn].asin = (it.asin||'').toUpperCase().trim();
+      sm[fn].caisses[ca] = Number(it.qty||0)||0;
+    }
+    saveStateMap(sm);
+
+    // Re-render current product so the badge next to the compte updates immediately
+    try{ if(selectedProduct){ $('knownProd').innerHTML = prodHTML(selectedProduct, {fnsku: currentFnsku}); } }catch(e){}
+    try{ if($('confirmCaisses')){ const b = stateBadgesForFnsku((currentFnsku||'').toUpperCase().trim()); $('confirmCaisses').textContent = '🧺 Stock global: ' + (b && b!=='—' ? b.replace(/\s{2,}/g,' · ') : '—'); } }catch(e){}
+
     refreshPills();
-    $('syncMsg').textContent = '✅ Stock serveur reconstruit';
+    $('syncMsg').textContent = `✅ Rebuild OK — rebuilt=${r.rebuilt||0} — pull_state=${arr.length}`;
   }catch(e){
     $('syncMsg').textContent = '❌ Rebuild: '+(e.message||e);
   }
