--- a/index.html
+++ b/index.html
@@ -1361,11 +1361,13 @@ $('btnSyncNow').onclick = autoSync;
 $('btnPullNow').onclick = pullAll;
 $('btnRebuildState').onclick = async ()=>{
   try{
-    $('syncMsg').textContent = '⏳ Rechargement du stock central...';
+    $('syncMsg').textContent = '⏳ Rebuild stock serveur (depuis actions)...';
+    const r = await apiGet({op:'rebuild_state'});
+    if(!r.ok) throw new Error(r.error||'rebuild_state failed');
+
     const p = await apiGet({op:'pull_state'});
     if(!p.ok) throw new Error(p.error||'pull_state failed');
 
-    // Écrase complètement l'état local avec la vérité serveur (STOCK_STATE)
     const arr = p.state || [];
     const sm = {};
     for(const it of arr){
@@ -1378,12 +1380,11 @@ $('btnRebuildState').onclick = async ()=>{
     }
     saveStateMap(sm);
 
-    // Re-render product detail if visible
     try{ if(selectedProduct){ $('knownProd').innerHTML = prodHTML(selectedProduct, {fnsku: currentFnsku}); } }catch(e){}
     try{ if($('confirmCaisses')){ const b = stateBadgesForFnsku((currentFnsku||'').toUpperCase().trim()); $('confirmCaisses').textContent = '🧺 Stock global: ' + (b && b!=='—' ? b.replace(/\s{2,}/g,' · ') : '—'); } }catch(e){}
 
     refreshPills();
-    $('syncMsg').textContent = `✅ Stock central rechargé — lignes STOCK_STATE=${arr.length}`;
+    $('syncMsg').textContent = `✅ Rebuild OK — rebuilt=${r.rebuilt||0} — lignes STOCK_STATE=${arr.length}`;
   }catch(e){
     $('syncMsg').textContent = '❌ Rebuild: '+(e.message||e);
   }
